testsuite/tests/dependent/should_fail/BadTelescope2.stderr

BadTelescope2.hs:10:8: error:
    • These kind and type variables: a k (b :: k)
      are out of dependency order. Perhaps try this ordering:
        k (a :: k) (b :: k)
    • In the type signature: foo :: forall a k (b :: k). SameKind a b

BadTelescope2.hs:13:70: error:
    • Expected kind ‘k0’, but ‘d’ has kind ‘Proxy a’
    • In the second argument of ‘SameKind’, namely ‘d’
      In the type signature:
        bar :: forall a (c :: Proxy b) (d :: Proxy a).
               Proxy c -> SameKind b d
